# rust-exer

./: .gitignore
note/: q.md
redis/: Cargo.toml
redis/examples/: async.rs  cursor.rs  draft.rs  mini-tokio.rs  my-redis.rs  select.rs
redis/src/: connect.rs  main.rs
redis/src/clients/: blocking_client.rs
world_hello/: index.html
world_hello/src/: lib.rs  main.rs
