[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
lazy_static = "1.4.0"
bytes = "1"
futures = "0.3"

[[example]]
name = "my-redis"
path = "examples/my-redis.rs"

[[example]]
name = "draft"
path = "examples/draft.rs"

[[example]]
name = "mini-tokio"
path = "examples/mini-tokio.rs"
